# django-apcore

./: .code-forge.json  .dockerignore  .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/django-apcore/: prd.md  tech-design.md  upstream-sdk-analysis.md
docs/plans/: 2026-02-23-v0.3.0-implementation.md  2026-02-23-v0.3.0-redesign-design.md
example/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh
example/demo/: settings.py  urls.py  views.py
example/demo/apcore_modules/: __init__.py  api.tasks.create.binding.yaml  api.tasks.delete.binding.yaml  api.tasks.demo.binding.yaml  api.tasks.demo_2.binding.yaml  api.tasks.demo_3.binding.yaml  api.tasks.demo_4.binding.yaml  api.tasks.demo_5.binding.yaml  api.tasks.get.binding.yaml  api.tasks.get_2.binding.yaml  api.tasks.list.binding.yaml  api.tasks.post.binding.yaml  api.tasks.put.binding.yaml  api.tasks.update.binding.yaml  hello.py  math_tools.py  slow_task.py  task_stats.py
example/tests/: test_demo.py
examples/acl_demo/: README.md  acl.yaml  manage.py  settings.py  urls.py  views.py
examples/task_manager/: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py
examples/task_manager/demo/: api.py  urls.py
examples/task_manager/demo/apcore_modules/: __init__.py  api.tasks.delete.binding.yaml  api.tasks.list.binding.yaml  api.tasks.update.binding.yaml
ideas/django-apcore/: draft.md  state.json
ideas/django-apcore/research/: competitive-analysis.md  market-notes.md
planning/: overview.md
planning/django-apcore/: overview.md  plan.md  state.json
planning/django-apcore/tasks/: 001-setup.md  002-settings.md  003-registry.md  004-app-config.md  005-scanner-base.md  006-output-writers.md  007-ninja-scanner.md  008-drf-scanner.md  009-scan-command.md  010-serve-command.md
src/django_apcore/: __init__.py  apps.py  client.py  context.py  extensions.py  registry.py  settings.py  shortcuts.py  tasks.py  urls.py  views.py
src/django_apcore/management/commands/: apcore_export.py  apcore_scan.py  apcore_serve.py  apcore_tasks.py
src/django_apcore/output/: __init__.py  python_writer.py  registry_writer.py  yaml_writer.py
src/django_apcore/scanners/: __init__.py  base.py  drf.py  ninja.py
src/django_apcore/web/: __init__.py  api.py  views.py
tests/: conftest.py  settings.py  test_acl_demo.py  test_app.py  test_client.py  test_commands.py  test_context.py  test_create_cli.py  test_embedded_server.py  test_example_project.py  test_executor.py  test_explorer.py  test_export_command.py  test_extensions.py  test_init.py  test_python_writer.py  test_registry.py  test_registry_writer.py  test_scanner_base.py  test_scanner_drf.py  test_scanner_ninja.py  test_serve_command.py  test_settings.py  test_shortcuts.py  test_tasks.py  test_yaml_writer.py
tests/integration/: test_registry_serve.py
