[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-apcore"
version = "0.3.0"
description = "Django App that bridges the apcore protocol to the Django ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Engineering Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "apcore>=0.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ninja = ["django-ninja>=1.0"]
drf = ["drf-spectacular>=0.27"]
mcp = ["apcore-mcp>=0.4.0"]
all = [
    "django-ninja>=1.0",
    "drf-spectacular>=0.27",
    "apcore-mcp>=0.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=4.2",
    "apdev[dev]>=0.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_apcore"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
django_find_project = false


[tool.apdev]
base_package = "django_apcore"
src_dir = "src"